examples/rivets/src/main.scss
body {
  font-family: 'Open Sans', sans-serif !important;
  font-weight: 400;
  background-color: #f3f3f3;
  h1,h2,h3 {
    font-weight: 300;
    font-family: 'Open Sans', sans-serif !important;
    text-align: center;
  }

  h3 {
    color: #333;
  }

  > header {
    margin: 0px;
    background-color: #fff;
    text-align: center;
    padding: 20px;
    border-bottom: 1px solid #c1c1c1;
    h1 {
      margin-top: 0px;
    }
    p {
      color: #999;
    }
  }

  footer {
    padding: 20px;
    text-align: center;
    color: #999;
  }  
}

#contact-form-view {
  h5 {
    font-weight: normal;
    text-align: center;
    color: #999;
  }
}

#contact-view {
  background-color: #fff;
  text-align: center;
  border: 1px solid #ddd;
  min-height: 200px;
  position: relative;
  padding-bottom: 40px;
  border: 1px solid #c1c1c1;

  img {
    -webkit-border-radius: 100px;
    border: 2px solid #3576be;
  }

  h1 {
    font-weight: 300;
  }

  .info {
    padding: 20px;
    p {
      font-weight: 300;
      color: #666;
      font-size: 1.3em;
    }
  }

  ul.links {
    position: absolute;
    bottom: 0px;
    width: 100%;
    margin: 0px;
    padding: 0px;
    list-style: none;
    background-color: #f3f3f3;
    padding: 10px 0px;
    li {
      display: inline;
      margin-left: 10px;
      a {
        i {
          font-size: 2em;
        }
        &:hover {
          text-decoration: none;
        }
      }
    }
  }
}

#model-json-view {
  header {
    text-align: center;
    color: #999;
    padding: 10px 0px;
  }
  pre {
    background-color: #fff;
  }
}

